# Alter

./: .gitignore  Android17_Report.md  Dhruv_Rathee_New_Videos_Report.md  PLAN.md  README.md  ROADMAP.md  future_roadmap.md.resolved  inspect_memory.py  mem_arch.md  new_feature.md  pyproject.toml
config/: alter.yaml
docker/searxng/: docker-compose.yml  setup.ps1
docker/searxng/searxng/: settings.yml
docs/: architecture.md  security.md
src/alter/: cli.py  config.py
src/alter/core/: __init__.py  agent.py  audit.py
src/alter/core/agents/: coder.py  search_pipeline.py  surfer.py
src/alter/core/llm/: __init__.py  base.py  echo.py  factory.py  github_auth.py  llama_cpp.py  ollama.py  openai.py
src/alter/core/memory/: __init__.py  compaction.py  embeddings.py  profile.py  state_store.py  store.py  summary.py
src/alter/core/server/: __init__.py  app.py  auth.py  json_parser.py  models.py  ratelimit.py
src/alter/core/tools/: __init__.py  base.py  clipboard.py  coder.py  defaults.py  env.py  fs.py  git.py  launcher.py  process.py  registry.py  rename.py  search.py  shell.py  system.py  time.py  web.py  write.py
src/alter/ui/: app.js  index.html  styles.css
tests/: test_agent_session.py  test_auth.py  test_config.py  test_memory_store.py  test_memory_summary.py  test_ollama_picker.py  test_tools.py  verify_coder.py  verify_surf_pipeline.py  verify_tools.py
