[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "alter-agent"
version = "0.1.0"
description = "Alter: Windows-first local AI agent with CLI + local web UI, safe tools, and pluggable local LLM backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Aditya" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "jsonschema>=4.21",
  "httpx>=0.26",
  "trafilatura>=1.6",
  "sentence-transformers>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.2.72"]
web = [
  "ddgs>=6.1.0",
  "playwright>=1.40",
  "beautifulsoup4>=4.12",
]
time = []
dev = [
  "pytest>=8.0",
]

[project.scripts]
alter = "alter.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/alter"]
include = [
  "src/alter/ui/*.html",
  "src/alter/ui/*.css",
  "src/alter/ui/*.js",
  "src/alter/ui/assets/*",
]
